base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app-svc
spec:
  selector:
    app: hello-app
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
